--- a/templates/property_list.html
+++ b/templates/property_list.html
@@ -621,6 +621,131 @@
                         </div>
                     </div>
 
+                      <!--pearl_beach_resort-->
+
+                      <div class="hotel-hover">
+                        <div class="hotel-card">
+                            <div class="hotel-image">
+                                <a href="{%url 'pearl_beach_resort_details' %}">
+                                <img src="{% static 'image/property_img/d_pearl_main.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                </a>
+                                <div class="more-photos">See all</div>
+                            </div>
+                            <div class="hotel-info">
+                                <div class="hotel-details">
+                                    <a href="{%url 'pearl_beach_resort_details' %}">
+                                    <h2>D Pearl HomeStay</h2>
+                                    </a>
+                                    <p><a href="#">D Pearl HomeStay</a></p>
+                                    <p>About 800 metres walk to Varkala Beach</p>
+                                    <div class="amenities">
+                                        <span>Garden</span>
+                                        <span> Wi-Fi</span>
+                                        <span>Shared Access</span>
+                                        <span>Room service</span>
+                                        <span>Non-smoking rooms</span>
+                                    </div>
+                                </div>
+                                <div class="details_info">
+                                    <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+    
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/pearl_beach_resort/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/pearl_beach_resort/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+    
+                                    <a class="viewmore_a" href="{%url 'pearl_beach_resort_details' %}">
+                                        <button class="view_more_btn">View more</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+
+
+                       <!--varkala_villa-->
+
+                       <div class="hotel-hover">
+                        <div class="hotel-card">
+                            <div class="hotel-image">
+                                <a href="{%url 'varkala_villa_details' %}">
+                                <img src="{% static 'image/property_img/varkla_villa_main.png' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                </a>
+                                <div class="more-photos">See all</div>
+                            </div>
+                            <div class="hotel-info">
+                                <div class="hotel-details">
+                                    <a href="{%url 'varkala_villa_details' %}">
+                                    <h2>Varkala Villa</h2>
+                                    </a>
+                                    <p><a href="#">Varkala Villa</a></p>
+                                    <p>About 2.3 Km to Varkala Beach</p>
+                                    <div class="amenities">
+                                        <span>Lawn</span>
+                                        <span>Wi-Fi</span>
+                                        <span>Shared Parking</span>
+                                        <span>Room service</span>
+                                        <span>Kitchenette</span>
+                                    </div>
+                                </div>
+                                <div class="details_info">
+                                    <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+    
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/varkala_villa/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/varkala_villa/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+    
+                                    <a class="viewmore_a" href="{%url 'varkala_villa_details' %}">
+                                        <button class="view_more_btn">View more</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+
+
+                       <!--pura_vida-->
+
+                       <div class="hotel-hover">
+                        <div class="hotel-card">
+                            <div class="hotel-image">
+                                <a href="{%url 'pura_vida_details' %}">
+                                <img src="{% static 'image/property_img/pura_vida_main.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                </a>
+                                <div class="more-photos">See all</div>
+                            </div>
+                            <div class="hotel-info">
+                                <div class="hotel-details">
+                                    <a href="{%url 'pura_vida_details' %}">
+                                    <h2>Pura Vida </h2>
+                                    </a>
+                                    <p><a href="#">Pura Vida </a></p>
+                                    <p>Temple Rd, Varkala, South Cliff Varkala Town, Varkala</p>
+                                    <div class="amenities">
+                                        <span>Car park [on-site]</span>
+                                        <span>Wi-Fi</span>
+                                        <span>Laundry service</span>
+                                        <span>Daily housekeeping</span>
+                                        <span>Security [24-hour]</span>
+                                    </div>
+                                </div>
+                                <div class="details_info">
+                                    <a href="tel:+9108069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+    
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/pura_vida/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/pura_vida/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+    
+                                    <a class="viewmore_a" href="{%url 'pura_vida_details' %}">
+                                        <button class="view_more_btn">View more</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+
             </div>
         </div>
       
