--- a/templates/property_list.html
+++ b/templates/property_list.html
@@ -758,7 +758,7 @@
                     <div class="col-lg-3  col-md-6 col-sm-6">
                         <div class="single-footer-widget">
                             <h6 class="footer_title">About Agency</h6>
-                            <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                            <p class="footer-about">Hudels Hospitality Services Pvt Ltd, founded in 2019 and has grown with time. Hudels has a diversified culture and is highly Service oriented. We cater in to various segments and ensure that we deliver high standards and meet the requirement of each client. We believe in strong relationshis and we focus on building healthy relationships with our Customers. To make these partnerships with some big names. But this has helped us grow in every aspect and each one of them has contributed to our success story, may it be big or small. Without these partnerships we perhaps may not exist and thus along with our customers we value all of these as brands with high regards and would like to Thank each one of them for making our journey a successful one till now. </p>
                         </div>
                     </div>					
                 </div>
