--- a/templates/varkala_villa.html
+++ b/templates/varkala_villa.html
@@ -132,7 +132,7 @@
 
                                         <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Queen Bed </li>
                                         <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
-                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk</li>
+                                        <li><img src="{% static 'image/property_img/desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk</li>
                                         <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li>
                                         <li><img src="{% static 'image/property_img/public-toilet.png' %}" alt="" style="height: 20px; width: 20px;"> 4 x Bathroom </li>
                                         <li><img src="{% static 'image/property_img/bedroom.png' %}" alt="" style="height: 20px; width: 20px;"> 4 x Bedroom </li>
