--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -142,6 +142,81 @@
                             </div>
                         </div>
                     </div>
+                    <!-- new -->
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/pura_vida_main.jpeg' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/pura_vida_main.jpeg' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/pura_vida_main3.jpeg' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/pura_vida_main3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/urban_cliff_main.jpg' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/urban_cliff_main.jpg' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/urban_cliff_out.jpg' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/urban_cliff_out.jpg' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/ss_beach_resort_main.jpeg' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/ss_beach_resort_main.jpeg' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/kerla_bambo_entrnce.jpg' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/kerla_bambo_entrnce.jpg' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/zion_new.png' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/zion_new.png' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/varkla_villa_main.png' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/varkla_villa_main.png' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 gallery_page_item">
+                        <div class="gallery_page_img">
+                            <img src="{% static 'image/property_img/d_pearl_main.jpg' %}" alt="">
+                            <div class="hover">
+                              <a class="light" href="{% static 'image/property_img/d_pearl_main.jpg' %}"><i class="fa fa-expand"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -154,7 +229,7 @@
                     <div class="col-lg-3  col-md-6 col-sm-6">
                         <div class="single-footer-widget">
                             <h6 class="footer_title">About Agency</h6>
-                            <p class="footer-about">Hudels Hospitality Services Pvt Ltd, founded in 2019 and has grown with time. Hudels has a diversified culture and is highly Service oriented. We cater in to various segments and ensure that we deliver high standards and meet the requirement of each client. We believe in strong relationshis and we focus on building healthy relationships with our Customers. To make these partnerships with some big names. But this has helped us grow in every aspect and each one of them has contributed to our success story, may it be big or small. Without these partnerships we perhaps may not exist and thus along with our customers we value all of these as brands with high regards and would like to Thank each one of them for making our journey a successful one till now. </p>
+                            <p class="footer-about">Hudels Hospitality Services Pvt Ltd, founded in 2019 and has grown with time. Hudels has a diversified culture and is highly Service oriented. We cater in to various segments and ensure that we deliver high standards and meet the requirement of each client. We believe in strong relationshis and we focus on building healthy relationships with our Customers. To make these partnerships with some big names. But this has helped us grow in every aspect and each one of them has contributed to our success story, may it be big or small. Without these partnerships we perhaps may not exist and thus along with our customers we value all of these as brands with high regards and would like to Thank each one of them for making our journey a successful one till now.</p>
                         </div>
                     </div>
                 </div>
