--- a/templates/villa_skyframe_details.html
+++ b/templates/villa_skyframe_details.html
@@ -211,8 +211,8 @@
                     </div>
                         <h1 class="Location">Location</h1>
                         <div class="map">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.5379577091185!2d76.7048567!3d8.7353467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05eed6aaaaaaab%3A0xfb4dd2c6ae60bd18!2sSS%20BeachResort!5e0!3m2!1sen!2sin!4v1719988727241!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <a href="https://maps.app.goo.gl/kT9X36c9qqvRuF2h7" target="_blank">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.627147559073!2d76.70954717577132!3d8.726909091322888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05eedde07776bb%3A0x1b510a778eae69a2!2sVilla%20Skyframe!5e0!3m2!1sen!2sin!4v1722256968113!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <a href="https://maps.app.goo.gl/iSusRG2g5wDCXSuZ8" target="_blank">
                                 <button class="view-map">View on Map</button>
                             </a>              
                         </div>
