--- a/templates/index.html
+++ b/templates/index.html
@@ -281,14 +281,14 @@
 					<div class="hotel-hover">
 						<div class="hotel-card">
 							<div class="hotel-image">
-								<a href="{%url 'evebeach_details' %}">
+								<a href="{%url 'evabeach_details' %}">
 								<img src="{% static 'image/property_img/eva_beach_1.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
 								</a>
 								<div class="more-photos">See all</div>
 							</div>
 							<div class="hotel-info">
 								<div class="hotel-details">
-									<a href="{%url 'evebeach_details' %}">
+									<a href="{%url 'evabeach_details' %}">
 									<h2>Eva Beach Hotel</h2>
 									</a>
 									<p><a href="#">Eva Beach Hotel</a></p>
@@ -305,8 +305,8 @@
 									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
 
                                     <div class="share-buttons">
-                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/evebeach/" class="facebook" target="_blank">Share on Facebook</a>
-                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/evebeach/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/evabeach/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/evabeach/" class="whatsapp" target="_blank">Share on WhatsApp</a>
                                     </div>
 
 									<a class="viewmore_a" href="{%url 'evebeach_details' %}">
