--- a/templates/index.html
+++ b/templates/index.html
@@ -309,7 +309,7 @@
                                         <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/evabeach/" class="whatsapp" target="_blank">Share on WhatsApp</a>
                                     </div>
 
-									<a class="viewmore_a" href="{%url 'evebeach_details' %}">
+									<a class="viewmore_a" href="{%url 'evabeach_details' %}">
 										<button class="view_more_btn">View more</button>
 									</a>
 								</div>
