--- a/templates/index.html
+++ b/templates/index.html
@@ -921,7 +921,7 @@
                             </div>
                             <div class="details_1">
                               
-                                <a href="{%url 'evebeach_details' %}"><h4 class="sec_h4_1">Villa Skyframe</h4></a>
+                                <a href="{%url 'evabeach_details' %}"><h4 class="sec_h4_1">Villa Skyframe</h4></a>
                                 
                             </div>
                         </div>
