--- a/templates/property_list.html
+++ b/templates/property_list.html
@@ -407,6 +407,50 @@
 							</div>
 						</div>
 					</div>
+                     <!-- hotel 8 varkalastays_premium_by_hudels-->
+					<div class="hotel-hover">
+						<div class="hotel-card">
+							<div class="hotel-image">
+								<a href="{%url 'varkalastays_premium_by_hudels_details' %}">
+								<img src="{% static 'image/property_img/varkalastays_prm_byhudels_main.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+								</a>
+								<div class="more-photos">See all</div>
+							</div>
+							<div class="hotel-info">
+								<div class="hotel-details">
+									<a href="{%url 'varkalastays_premium_by_hudels_details' %}">
+									<h2>Varkala Stays Premium By Hudels</h2>
+									</a>
+									<p><a href="#">Varkala Stays Premium By Hudels </a></p>
+									<p>Beach side Property</p>
+									<div class="amenities">
+										<span>Car park</span>
+                                        <span>Wi-Fi </span>
+                                        <span>Bike Rent</span>
+                                        <span>Sea-view Rooms</span>
+                                        <span>Swimming Pool </span> 
+                                        <span>Inhouse Restaurant </span>
+                                        <span>Taxi Service</span>
+                                        <span>Activities</span>
+                                        <span>Beach View</span>
+									</div>
+								</div>
+								<div class="details_info">
+									<a href="tel:+918069640311"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <div class="share-buttons">
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://varkalastays.com/varkalastays_premium_by_hudels/" class="facebook" target="_blank">Share on Facebook</a>
+                                        <a href="https://api.whatsapp.com/send?text=Check%20this%20out!%20https://varkalastays.com/varkalastays_premium_by_hudels/" class="whatsapp" target="_blank">Share on WhatsApp</a>
+                                    </div>
+
+
+									<a class="viewmore_a" href="{%url 'varkalastays_premium_by_hudels_details' %}">
+										<button class="view_more_btn">View more</button>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 
             </div>
@@ -621,7 +665,7 @@
                         </div>
                     </div>
 
-                      <!--pearl_beach_resort-->
+                       <!--pearl_beach_resort-->
 
                       <div class="hotel-hover">
                         <div class="hotel-card">
