--- a/templates/varkalastays_premium_by_hudels.html
+++ b/templates/varkalastays_premium_by_hudels.html
@@ -82,7 +82,7 @@
                         </div>
                         <div class="thumbnails">
                             <img src="{% static 'image/property_img/varkalastays_prm_byhudels_2.jpg' %}" alt="Video Thumbnail">
-                            <img src="{% static 'image/property_img/nisara_room2.jpeg' %}" alt="Room">
+                            <img src="{% static 'image/property_img/varkalastays_prm_byhudels_out.jpg' %}" alt="Room">
                         </div>
                     </div>
                     <div class="hotel-name">
