--- a/templates/varkalastays_premium_by_hudels.html
+++ b/templates/varkalastays_premium_by_hudels.html
@@ -210,8 +210,8 @@
                    
                         <h1 class="Location">Location</h1>
                         <div class="map">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.616911168067!2d76.70902447406381!3d8.727877893631794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05ef623d1feb53%3A0xfbf972b1781698fb!2sNisara%20Homestay!5e0!3m2!1sen!2sin!4v1717518465665!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <a href="https://maps.app.goo.gl/1RiQGcBHW2p75ExF6" target="_blank">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d985.8221143079328!2d76.68809514795312!3d8.758907304165376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05efe493a68c75%3A0xd31b1c6d46bf2bf6!2sAshokam%20Resort%20Varkala!5e0!3m2!1sen!2sin!4v1722589921215!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <a href="https://maps.app.goo.gl/6kQk3ybuCWyDU8kv5" target="_blank">
                                 <button class="view-map">View on Map</button>
                             </a>              
                         </div>
