--- a/templates/varkalastays_premium_by_hudels.html
+++ b/templates/varkalastays_premium_by_hudels.html
@@ -230,7 +230,9 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">Situated within 1.3 km of Varkala Beach and 2 km of Odayam Beach in Varkala, Nisara Homestay provides accommodation with a kitchen. The air-conditioned accommodation is a few steps from Aaliyirakkm Beach. There is free private parking and the property features paid airport shuttle service.
+                                <p class="footer-about"> Escape to the arms of nature with Varkala Stays a sea-facing property amidst lush greenery with luxury accommodation and premium amenities. <br>
+                                    The property is situated at a tranquil location heaving natural views all around. <br>
+                                    Relax and unwind at the swimming pool available on-site. <br>
                                 </p>
                             </div>
 
