--- a/templates/ashokam_details.html
+++ b/templates/ashokam_details.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="{% static 'image/varkala_logo.png' %}" type="image/png">
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-        <title>Varkal Stays</title>
+        <title>Varkala Stays</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
         <link rel="stylesheet" href="{% static '/vendors/linericon/style.css' %}">
