--- a/templates/moon_waves_details.html
+++ b/templates/moon_waves_details.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="{% static 'image/varkala_logo.png' %}" type="image/png">
-        <title>Varkal Stays</title>
+        <title>Varkala Stays</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
         <link rel="stylesheet" href="{% static '/vendors/linericon/style.css' %}">
